Création du dossier 'img' et 'css', du fichier 'index.js' et correction d'emplacement du 'style.css'

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/static/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;600;800&family=Work+Sans:wght@400;600&display=swap" rel="stylesheet">  
@@ -16,7 +16,7 @@
     <div class="top_bar">
 
         <div class="logo_title">
-          <img src="img/logo.svg" alt="logo">
+          <img src="/static/img/logo.svg" alt="logo">
             <h1>Weather forecast</h1>  
         </div>
         
@@ -28,7 +28,7 @@
     </div>
 
     <!-- Point d'insertion de la vue -->  
-     
+
 </body>
 
 <footer>   
