Création des vues 'Dashboard.js' et 'LocationView.js'

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -28,10 +28,12 @@
     </div>
 
     <!-- Point d'insertion de la vue -->  
+    <div id="app"></div>
 
 </body>
 
 <footer>   
     <h1>Weather data provided by OpenWeather</h1> 
 </footer>
+<script type="module" src="/static/js/index.js"></script>
 </html>
