--- a/frontend/index.html
+++ b/frontend/index.html
@@ -24,12 +24,14 @@
             <input type="search" placeholder="Search the city...">
             <button type="button">Search</button>
         </div>
+    </div>    
 
-    </div>
-
-    <!-- Point d'insertion de la vue -->  
-    <div id="app"></div>
-
+    <main>
+        <div id="app">            
+            <!-- Point d'insertion de la vue -->
+        </div> 
+    </main>     
+    
 </body>
 
 <footer>   
