Implementation de la recherche

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,11 +21,12 @@
         </div>
         
         <div class="search_bar">
-            <input type="search" placeholder="Search the city...">
-            <button type="button">Search</button>
+            <input type="search" placeholder="Search the city..." class="search_input">
+            <button type="button" id="btnSearch">Search</button>
         </div>
+        
     </div>    
-
+    <div class="search_results_container hidden"></div>
     <main>
         <div id="app">            
             <!-- Point d'insertion de la vue -->
